--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -911,7 +911,8 @@ label.small {
 	margin-bottom: 35px;
 	opacity: 1;
 	transition: opacity var(--t-basic);
-	width: 380px;
+	width: 350px;
+	max-width: 330px;
 }
 
 .option_container.grid.piste_select.disabled {
@@ -1124,7 +1125,7 @@ input[type=radio]:checked:disabled + label:before {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	z-index: 2;
+	z-index: 5;
 	opacity: 1;
 	transition: opacity var(--t-basic);
 }
@@ -1290,7 +1291,6 @@ input[type=radio]:checked:disabled + label:before {
 
 .sublist_title {
 	transition: var(--t-basic);
-	display: table-cell;
 	padding: 0;
 	margin: 0;
 	border-bottom: 1px solid var(--c-black);
@@ -2588,6 +2588,18 @@ div.title_box > button {
 }
 
 /* ///REFEREES/// */
+
+/* ///TABLE// */
+
+#ref_panel {
+	top: calc(50px + 3vh);
+	right: 400px;
+}
+
+#pist_time_panel {
+	top: calc(50px + 3vh);
+	right: 40px;
+}
 
 /* ///MANAGE ENTRIES/// */
 
